--- a/package.json
+++ b/package.json
@@ -41,15 +41,15 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "1.0.4",
-    "date-fns": "4.1.0",
+    "date-fns": "^2.29.3",
     "embla-carousel-react": "8.5.1",
     "input-otp": "1.4.1",
     "lucide-react": "^0.454.0",
     "next": "15.2.4",
     "next-themes": "latest",
-    "react": "^19",
+    "react": "^18.2.0",
     "react-day-picker": "8.10.1",
-    "react-dom": "^19",
+    "react-dom": "^18.2.0",
     "react-hook-form": "^7.54.1",
     "react-resizable-panels": "^2.1.7",
     "recharts": "2.15.0",
@@ -59,8 +59,6 @@
     "vaul": "^0.9.6",
     "zod": "^3.24.1",
     "@emotion/is-prop-valid": "latest",
-    "@auth/core": "latest",
-    "nodemailer": "latest",
     "pg": "latest",
     "gel": "latest",
     "knex": "latest",
@@ -71,7 +69,6 @@
     "postgres": "latest",
     "@types/pg": "latest",
     "bun-types": "latest",
-    "expo-sqlite": "latest",
     "@types/sql.js": "latest",
     "@libsql/client": "latest",
     "@prisma/client": "latest",
@@ -87,13 +84,14 @@
     "@aws-sdk/client-rds-data": "latest",
     "@neondatabase/serverless": "latest",
     "@cloudflare/workers-types": "latest",
-    "@op-engineering/op-sqlite": "latest",
+    "@auth/core": "latest",
+    "nodemailer": "latest",
     "framer-motion": "latest",
-    "next-auth": "latest",
-    "bcryptjs": "latest",
-    "react-icons": "latest",
     "drizzle-orm": "latest",
-    "uuid": "latest"
+    "uuid": "latest",
+    "bcryptjs": "latest",
+    "next-auth": "latest",
+    "react-icons": "latest"
   },
   "devDependencies": {
     "@types/node": "^22",
